# HomeworldSDL

./: .gitignore  README.md  meson.build
assets/: meson.build
assets/HomeworldSDL_big/: meson.build
src/: meson.build
src/Game/: Animatic.c  BigFile.c  ETG.c  File.c  KASFunc.c  Particle.c  SinglePlayer.c  TitanNet.c  Types.h  meson.build
src/Missions/: meson.build
src/Missions/SinglePlayer/: Mission03.kas  Mission09.kas  meson.build
src/Missions/Tutorials/: meson.build
src/SDL/: TitanInterfaceC.c  TitanInterfaceC.h  font.c  main.c  main.h  mainrgn.c  meson.build  render.c  rinit.c  screenshot.c  smixer.c  soundlow.c  sstream.c  utility.c
src/Ships/: meson.build
tools/: meson.build
tools/biggie/: main.c  meson.build
tools/kas2c/: parser.y
tools/polycount/: file.c  file.h  mex.c  types.h
tools/x86_64/: bank.c  fib.c  file.c  file.h  font.c  lif.c  ll.c  mad.c  meson.build  nis.c
